# itunes-mtp

./: .editorconfig  .gitattributes  .gitignore  CONTRIBUTORS.md  Cargo.toml  LICENSE.md  README.md  ROADMAP.md  TODO.md  ZONELESS.md  angular.json  commitlint.config.mjs  eslint.config.mjs  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  tailwind.config.ts  tsconfig.json  tsconfig.spec.json  vitest.config.mjs  vitest.setup.ts
.cursor/rules/: angular-typescript.mdc  git-workflow.mdc  rust.mdc  testing.mdc
.github/: ACT_USAGE.md
.github/workflows/: README.md  ci.yml  lint.yml  test.yml
.husky/: commit-msg  install.mjs  pre-commit  pre-push
src/: app_state.rs  index.html  main.rs  mtp.rs  styles.scss  test-providers.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: app_state.rs  errors.rs  lib.rs  main.rs  mtp.rs  retry.rs  sync_report.rs
src/app/: app.component.html  app.component.ts  app.config.ts  app.routes.ts
src/app/core/: tauri.testing.ts  tauri.ts
src/app/core/services/: app-state.service.spec.ts  app-state.service.ts  async-handler.service.spec.ts  async-handler.service.ts  itunes-library.service.spec.ts  itunes-library.service.ts  mtp-device.service.spec.ts  mtp-device.service.ts  sync.service.spec.ts  sync.service.ts
src/app/home/: home.component.html  home.component.spec.ts  home.component.ts
src/app/shared/models/: device.model.ts  library.model.ts  sync.model.ts
