[package]
name = "itunes-mtp"
version = "0.1.0"
edition = "2021"

[dependencies]
iced = { version = "0.10", features = ["tokio", "debug"] }
quick-xml = "0.31"

[dependencies.windows]
version = "0.48"
features = [
  "Win32_Foundation",
  "Win32_UI_WindowsAndMessaging",
  "Win32_UI_Controls_Dialogs",
  "Win32_System_LibraryLoader",
  "Win32_Graphics_Gdi",
  "Win32_Devices",
  "Win32_Devices_PortableDevices",
  "Win32_System_Com",
  "Win32_UI_Shell_PropertiesSystem",
  "Win32_System_Com_StructuredStorage",
  "UI",
  "ApplicationModel"
]
