[package]
name = "itunes-mtp"
version = "0.1.0"
description = "App to transfer iTunes playlists to MTP devices"
authors = ["Joseph R. Quinn <quinn.josephr@protonmail.com>"]
edition = "2021"

[lib]
name = "itunes_mtp_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["custom-protocol"] }
tauri-plugin-opener = "2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1"
oneshot = "0.1.8"
quick-xml = "0.37"

[dependencies.windows]
version = "0.58.0"
features = [
  "Win32_Foundation",
  "Win32_UI_WindowsAndMessaging",
  "Win32_UI_Controls_Dialogs",
  "Win32_System_LibraryLoader",
  "Win32_Graphics_Gdi",
  "Win32_Devices",
  "Win32_Devices_PortableDevices",
  "Win32_System_Com",
  "Win32_UI_Shell_PropertiesSystem",
  "Win32_System_Com_StructuredStorage"
]

